// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Slider /> should change image scale and finish croppping 1`] = `
.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  border: none;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
  height: 3.2rem;
  font-size: 1.4rem;
  font-weight: 500;
  background-color: #3D485F;
  border: 0.8rem;
  padding: 0.4rem 3.2rem;
  border-radius: 1.6rem;
}

.c5:hover {
  background-color: #677489;
}

.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  max-width: 27.6rem;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 27.6rem;
  margin-bottom: 3.2rem;
}

.c3 {
  line-height: 2.8rem;
  font-size: 1.6rem;
  font-weight: 400;
  color: #677489;
  margin-bottom: 1.2rem;
}

.c4 {
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  outline: 0;
  height: 0.2rem;
  min-height: 0.2rem;
  border-radius: 0.1rem;
  background: linear-gradient( to right, #3F80FF 0%, #3F80FF 50%, #B9D1FF 50%, #B9D1FF 100% );
}

.c4::-webkit-slider-thumb {
  -webkit-appearance: none;
  width: 12px;
  height: 12px;
  border-radius: 50%;
  background-color: #3F80FF;
}

.c4::-moz-range-thumb {
  -moz-appearance: none;
  width: 12px;
  height: 12px;
  border-radius: 50%;
  background-color: #3F80FF;
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <span
        class="c3"
      >
        Crop
      </span>
      <input
        class="c4"
        data-testid="slider-input"
        max="2"
        min="1"
        step=".1"
        type="range"
        value="1.5"
      />
    </div>
    <button
      class="c5"
    >
      Save
    </button>
  </div>
</div>
`;

exports[`<Slider /> should render DropZone as default 1`] = `
.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
  pointer-events: none;
}

.c2 {
  margin-right: 1.2rem;
}

.c3 {
  line-height: 2.5rem;
  font-size: 1.4rem;
  font-weight: 500;
  color: #495567;
}

.c4 {
  line-height: 2.5rem;
  pointer-events: none;
  text-align: center;
  font-size: 1.4rem;
  font-weight: 400;
  color: #677489;
}

<div
  class="c0"
>
  <header
    class="c1"
  >
    <img
      alt="media icon"
      class="c2"
      src="/img/media.svg"
    />
    <h3
      class="c3"
    >
      Organization Logo
    </h3>
  </header>
  <p
    class="c4"
  >
    Drop the image here or click to browse.
  </p>
</div>
`;

exports[
  `<Slider /> should render with error and click on try again button 1`
] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  border: none;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
  height: 3.2rem;
  font-size: 1.4rem;
  font-weight: 500;
  background-color: #3D485F;
  border: 0.8rem;
  padding: 0.4rem 3.2rem;
  border-radius: 1.6rem;
  background: transparent;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  padding: 0;
  font-size: 1.6rem;
  line-height: 2.8rem;
  font-weight: 500;
  color: #3D485F;
}

.c2:hover {
  background-color: #677489;
}

.c2:hover {
  background-color: transparent;
  color: #677489;
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-left: 1.6rem;
}

.c1 {
  pointer-events: none;
  line-height: 2.8rem;
  font-size: 1.6rem;
  font-weight: 400;
  color: #C64D32;
}

@media (min-width:450px) {
  .c0 {
    margin-left: 3.2rem;
  }
}

<div
  class="c0"
>
  <p
    class="c1"
  >
    Sorry, the upload failed.
  </p>
  <button
    class="c2"
  >
    Try again
  </button>
</div>
`;

exports[`<Slider /> should render with success 1`] = `
.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 1.6rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
  pointer-events: none;
}

.c2 {
  margin-right: 1.2rem;
}

.c3 {
  line-height: 2.5rem;
  font-size: 1.4rem;
  font-weight: 500;
  color: #495567;
}

.c4 {
  line-height: 2.5rem;
  pointer-events: none;
  text-align: center;
  font-size: 1.4rem;
  font-weight: 400;
  color: #677489;
}

@media (min-width:450px) {
  .c0 {
    margin-left: 3.2rem;
  }
}

<div
  class="c0"
>
  <header
    class="c1"
  >
    <img
      alt="media icon"
      class="c2"
      src="/img/media.svg"
    />
    <h3
      class="c3"
    >
      Organization Logo
    </h3>
  </header>
  <p
    class="c4"
  >
    Drop the image here or click to browse.
  </p>
</div>
`;
